--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Alan Scandrett, Source http://startbootstrap.com/template-overviews/simple-sidebar">
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>774</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -23,10 +23,10 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+	<link rel="icon" href="http://www.coe.int/coe-map-portlet/images/icon.png">
 </head>
 
-<body>
+<body onload="nav()">
 
     <div id="wrapper">
 
@@ -35,26 +35,26 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        Start Bootstrap
+                        Navigation Menu
                     </a>
                 </li>
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">Shortcuts</a>
+                    <a href="#">Lab 1</a>
                 </li>
                 <li>
-                    <a href="#">Overview</a>
+                    <a href="#">Lab 2</a>
                 </li>
                 <li>
-                    <a href="#">Events</a>
+                    <a href="#">Lab 3</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#">Lab 4</a>
                 </li>
                 <li>
-                    <a href="#">Services</a>
+                    <a href="#">Lab 5</a>
                 </li>
                 <li>
                     <a href="#">Contact</a>
@@ -68,10 +68,10 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Simple Sidebar</h1>
-                        <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        <h1>Geography 774</h1>
+						<h2 style="font-size:130%"> <i>Alan Scandrett</i> </h2>
+                        <p>The purpose of this website is to showcase work from the Geography 774 " Advanced Spatial Data Handling" course of Auckland University. A series of web based maps are available for inspection via the navigation bar to the left of your browser window. This webpage has been built upon a bootstrap template which is available <a href ="https://github.com/BlackrockDigital/startbootstrap-simple-sidebar"> here</a>.</p>
+                        <p>It is a geographic <code>'Hello World!'</code>.</p>
                     </div>
                 </div>
             </div>
@@ -89,10 +89,8 @@
 
     <!-- Menu Toggle Script -->
     <script>
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
-    });
+	function nav(){
+        $("#wrapper").toggleClass("toggled");}
     </script>
 
 </body>
