--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
                     <a href="pages/lab1.html">Lab 1</a>
                 </li>
                 <li>
-                    <a href="#">Lab 2</a>
+                    <a href="pages/lab2.html">Lab 2</a>
                 </li>
                 <li>
-                    <a href="#">Lab 3</a>
+                    <a href="pages/lab3.html">Lab 3</a>
                 </li>
                 <li>
-                    <a href="#">Lab 4</a>
+                    <a href="pages/lab4.html">Lab 4</a>
                 </li>
                 <li>
-                    <a href="#">Lab 5</a>
+                    <a href="pages/lab5.html">Lab 5</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="pages/contact.html">Contact</a>
                 </li>
             </ul>
         </div>
