--- a/pages/lab1.html
+++ b/pages/lab1.html
@@ -54,7 +54,7 @@
                     <a href="../pages/lab4.html">Lab 4</a>
                 </li>
                 <li>
-                    <a href="../pages/lab5.html">Lab 5</a>
+                    <a href="../pages/project.html">Project</a>
                 </li>
                 <li>
                     <a href="../pages/contact.html">Contact</a>
