--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <a href="pages/lab4.html">Lab 4</a>
                 </li>
                 <li>
-                    <a href="pages/lab5.html">Lab 5</a>
+                    <a href="pages/project.html">Project</a>
                 </li>
                 <li>
                     <a href="pages/contact.html">Contact</a>
@@ -80,8 +80,10 @@
                         <p>The purpose of this website is to showcase work from the Geography 774 " Advanced Spatial Data Handling" course of Auckland University. A series of web based maps are available for inspection via the navigation bar to the left of your browser window. This webpage has been built upon a bootstrap template which is available <a href ="https://github.com/BlackrockDigital/startbootstrap-simple-sidebar"> here</a>.</p>
                         <p>It is a geographic <code>'Hello World!' <br></code></p>
 						<p><b>FUN FEATURE:</b>  click the polygon to change to a random colour!</p>
+
 						
 						<div id="mapid" style="width: 600px; height: 400px; position: relative;"></div>
+						<button type="button" onclick="reset()">Reset Map</button>
 						<script>
 						var mymap = L.map('mapid', {maxZoom: 15}).setView([-36.8589, 174.7755], 15); <!--- Sets window geo-locale-->
 						
@@ -214,11 +216,15 @@
 	var col = ["#D46A6A", "#6A9E98", "#87BC5E", "#AA5585", "#FFFFFF"]
 	function rando(){
 	return Math.floor(Math.random() * 6) + 1}
+	
 	var mystyle = {"color" : "#0F5933", "weight": 5, "opacity": 0.65};
 			L.geoJson(domain, {style: mystyle}).addTo(mymap);
 			
 	mymap.on('click', function(e){	var mystyle = {"color" : col[rando()], "weight": 5, "opacity": 0.65};
 			L.geoJson(domain, {style: mystyle}).addTo(mymap);})
+			
+	function reset(){mymap.removeLayer('domain')};
+			
 						</script>
                     </div>
                 </div>
