--- a/pages/project.html
+++ b/pages/project.html
@@ -68,13 +68,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Contact</h1>
-						<p>I can be reached at <a href="mailto:asca576@aucklanduni.ac.nz?Subject=774%20Contact" target="_top">asca576@aucklanduni.ac.nz</a>.
-						Alternatively you can reach me in person in my most likely place, the geocomputation lab at Floor 5 of Building 303: 1993 Symonds Street, Auckland..</p>
-						<div>
-						<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBG5_d2GMZmdOrC0K7_VNNga36ymwb031o&q=1993 Symonds Street, Auckland" allowfullscreen>
-</iframe>
-						</div>
+                        <h1>Lab 5</h1>
                     </div>
                 </div>
             </div>
