--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,9 +42,6 @@
                     <a href="../index.html">Home</a>
                 </li>
                 <li>
-                    <a href="../pages/lab1.html">Lab 1</a>
-                </li>
-                <li>
                     <a href="../pages/lab2.html">Lab 2</a>
                 </li>
                 <li>
@@ -54,10 +51,13 @@
                     <a href="../pages/lab4.html">Lab 4</a>
                 </li>
                 <li>
+                    <a href="../pages/lab5.html">Lab 5</a>
+                </li>
+                <li>
                     <a href="../pages/project.html">Project</a>
                 </li>
                 <li>
-                    <a href="../pages/contact.html">Contact</a>
+                    <a href="../pages/contact.html">Contact &#8592;</a>
                 </li>
             </ul>
         </div>
