--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="pages/lab1.html">Lab 1</a>
+                    <a href="index.html">Home &#8592;</a>
                 </li>
                 <li>
                     <a href="pages/lab2.html">Lab 2</a>
@@ -59,6 +56,9 @@
                 </li>
                 <li>
                     <a href="pages/lab4.html">Lab 4</a>
+                </li>
+                <li>
+                    <a href="pages/lab5.html">Lab 5</a>
                 </li>
                 <li>
                     <a href="pages/project.html">Project</a>
