--- a/pages/lab3.html
+++ b/pages/lab3.html
@@ -42,16 +42,16 @@
                     <a href="../index.html">Home</a>
                 </li>
                 <li>
-                    <a href="../pages/lab1.html">Lab 1</a>
-                </li>
-                <li>
                     <a href="../pages/lab2.html">Lab 2</a>
                 </li>
                 <li>
-                    <a href="../pages/lab3.html">Lab 3</a>
+                    <a href="../pages/lab3.html">Lab 3 &#8592;</a>
                 </li>
                 <li>
                     <a href="../pages/lab4.html">Lab 4</a>
+                </li>
+                <li>
+                    <a href="../pages/lab5.html">Lab 5</a>
                 </li>
                 <li>
                     <a href="../pages/project.html">Project</a>
