--- a/pages/lab5.html
+++ b/pages/lab5.html
@@ -42,19 +42,19 @@
                     <a href="../index.html">Home</a>
                 </li>
                 <li>
-                    <a href="../pages/lab1.html">Lab 1</a>
-                </li>
-                <li>
                     <a href="../pages/lab2.html">Lab 2</a>
                 </li>
                 <li>
                     <a href="../pages/lab3.html">Lab 3</a>
                 </li>
                 <li>
-                    <a href="../pages/lab4.html">Lab 4</a>
+                    <a href="../pages/lab4.html">Lab 4 </a>
                 </li>
                 <li>
-                    <a href="../pages/lab5.html">Lab 5</a>
+                    <a href="../pages/lab5.html">Lab 5 &#8592;</a>
+                </li>
+                <li>
+                    <a href="../pages/project.html">Project</a>
                 </li>
                 <li>
                     <a href="../pages/contact.html">Contact</a>
