--- a/pages/project.html
+++ b/pages/project.html
@@ -42,9 +42,6 @@
                     <a href="../index.html">Home</a>
                 </li>
                 <li>
-                    <a href="../pages/lab1.html">Lab 1</a>
-                </li>
-                <li>
                     <a href="../pages/lab2.html">Lab 2</a>
                 </li>
                 <li>
@@ -54,7 +51,10 @@
                     <a href="../pages/lab4.html">Lab 4</a>
                 </li>
                 <li>
-                    <a href="../pages/project.html">Project</a>
+                    <a href="../pages/lab5.html">Lab 5</a>
+                </li>
+                <li>
+                    <a href="../pages/project.html">Project &#8592;</a>
                 </li>
                 <li>
                     <a href="../pages/contact.html">Contact</a>
@@ -68,7 +68,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Lab 5</h1>
+                        <h1>Project</h1>
                     </div>
                 </div>
             </div>
