--- a/pages/lab2.html
+++ b/pages/lab2.html
@@ -69,6 +69,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>Lab 2</h1>
+			    <div>https://asca576.carto.com/builder/5a4e9c88-bdc2-49a9-9c67-b952c0a4c35d/embed?state=%7B%22map%22%3A%7B%22ne%22%3A%5B-38.73266112048232%2C170.98022460937503%5D%2C%22sw%22%3A%5B-35.4740916077303%2C181.35131835937503%5D%2C%22center%22%3A%5B-37.11871630496011%2C176.16577148437503%5D%2C%22zoom%22%3A8%7D%2C%22widgets%22%3A%7B%22d152cc17-cc6b-431f-8796-4858e6b915b6%22%3A%7B%22normalized%22%3Atrue%7D%7D%7D</div>
                     </div>
                 </div>
             </div>
