--- a/pages/lab2.html
+++ b/pages/lab2.html
@@ -69,7 +69,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>Lab 2</h1>
-			    <p> Data Sourced from: <a href="https://hackakl.koordinates.com" https://hackakl.koordinates.com </a>, collected by <a href="https://www.nzta.govt.nz/"> https://www.nzta.govt.nz/ </a>. 
+			    <p> Data Sourced from: <a href="https://hackakl.koordinates.com" https://hackakl.koordinates.com </a>, collected by <a href="https://www.nzta.govt.nz/"> https://www.nzta.govt.nz/ </a>. </p>
 			<div>
 				<iframe width="100%" height="820" frameborder="0" src="https://asca576.carto.com/builder/5a4e9c88-bdc2-49a9-9c67-b952c0a4c35d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 			</div>
