--- a/pages/project.html
+++ b/pages/project.html
@@ -30,7 +30,7 @@
 	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.39.1/mapbox-gl.css' rel='stylesheet'/>
 	<!-- Map Container Style -->
 	<style>
-	  #map { position:fixed; top:0; width:100%; height:100%; }
+	  #map { position:fixed; top:0; left:10%; width:90%; height:100%; }
 	</style>
 
 	<!-- Audio Button Style -->
@@ -68,7 +68,7 @@
 	</style>
 	</head>
 
-<body onload="nav()"  style="background-color:#0A0410;">
+<body onload="nav()">
 
     <div id="wrapper">
 
@@ -109,8 +109,7 @@
         <div id="page-content-wrapper">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-12">
-                        <h1>SSN Sinkings</h1>		
+                    <div class="col-lg-12">	
 	<div id='map'>
 		<!-- Audio Control Button -->
 		<nav id='listing-group' class='listing-group'>
@@ -147,7 +146,7 @@
 					center: [-76.72604, 34.72294], //  Atlantic
 					pitch: 50, // pitch in degrees
 					bearing: 50, // bearing in degrees
-					minZoom: 4.5,
+					minZoom: 3,
 					maxZoom: 8
 
 			});
@@ -311,7 +310,7 @@
 						"icon-image": "SSN",
 						"text-field": "{name}",
 						"text-font": ["Call Eight OT Italic", "Arial Unicode MS Bold"], //POI Font
-						"text-offset": [6, 2.5],
+						"text-offset": [3.5, 1.5],
 						"text-anchor": "top",
 					},
                 "paint": {
