--- a/pages/lab3.html
+++ b/pages/lab3.html
@@ -253,6 +253,7 @@ L.mapbox.styleLayer('mapbox://styles/asca/cj68xtpzz1uks2rn2rqjzv49l').addTo(map)
 					},
 					"layout": {
 						"icon-image": "za-provincial-2",
+						"icon-size": 0.5,
 						"text-field": "{title}",
 						"text-font": ["DIN Offc Pro Medium", "Arial Unicode MS Regular"], //POI Font
 						"text-offset": [0, 0.4],
@@ -260,6 +261,7 @@ L.mapbox.styleLayer('mapbox://styles/asca/cj68xtpzz1uks2rn2rqjzv49l').addTo(map)
 					},
                 "paint": {
                     "text-color": "green",
+					"text-size": "
                     "text-halo-color": "white",
                     "text-halo-width": 1,
                 },
