--- a/pages/lab3.html
+++ b/pages/lab3.html
@@ -261,7 +261,7 @@ L.mapbox.styleLayer('mapbox://styles/asca/cj68xtpzz1uks2rn2rqjzv49l').addTo(map)
 					},
                 "paint": {
                     "text-color": "green",
-					"text-size": "
+			"text-size": "15",
                     "text-halo-color": "white",
                     "text-halo-width": 1,
                 },
