--- a/pages/lab3.html
+++ b/pages/lab3.html
@@ -262,7 +262,7 @@ L.mapbox.styleLayer('mapbox://styles/asca/cj68xtpzz1uks2rn2rqjzv49l').addTo(map)
                 "paint": {
                     "text-color": "green",
                     "text-halo-color": "white",
-                    "text-halo-width": 1,
+                    "text-halo-width": 1
                 },
 				});
 		map2.setLayerZoomRange('greatwalksplan', 1, 22);
