--- a/pages/lab4.html
+++ b/pages/lab4.html
@@ -24,6 +24,34 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 	<link rel="icon" href="http://www.coe.int/coe-map-portlet/images/icon.png">
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" />
+	<script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"></script>
+	<style>
+	body{background-color: #DDDDDD;}
+	.info {
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+.info h4 {
+    margin: 0 0 5px;
+    color: #777;
+}
+.legend {
+    line-height: 18px;
+    color: #555;
+}
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
+</style>
 </head>
 
 <body onload="nav()">
@@ -48,7 +76,7 @@
                     <a href="../pages/lab3.html">Lab 3</a>
                 </li>
                 <li>
-                    <a href="../pages/lab4.html">Lab 4  &#8592;</a>
+                    <a href="../pages/lab4.html">Lab 4 &#8592;</a>
                 </li>
                 <li>
                     <a href="../pages/lab5.html">Lab 5</a>
@@ -68,8 +96,117 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Lab 4</h1>
+                        <h1><font color="#ce1256">Structural Fires in Auckland: A Hexbin Representation</h1>
                     </div>
+					<div>
+					<div id="mapid" style="width: 1600px; height: 800px; position: relative;"></div>
+	<script>
+	var mymap = L.map('mapid').setView([-36.8589, 174.7755], 10); <!--- Sets window geo-locale-->
+	
+	L.tileLayer('http://tiles-a.data-cdn.linz.govt.nz/services;key=54f485a5bafc497698fd56c8fba29039/tiles/v4/set=4769/EPSG:3857/{z}/{x}/{y}.png', {
+	attribution: 'Map data &copy;  NZ Fire Service <a href="https://fireandemergency.nz/">NZ Fire Service</a>. Imagery "Sourced from the LINZ Data Service <a href="https://data.linz.govt.nz/set/4769-nz-parcel-boundaries-wireframe/">WMTS</a> and licensed by LINZ for re-use under the Creative Commons Attribution 3.0 New Zealand licence."', id: 'mapbox.streets'
+	}).addTo(mymap); <!--- Brings in tile server connection -->
+	</script>
+	<script type="text/javascript" src="../js/GJ.js"></script>
+	
+	<script>
+
+	
+	function getColor(d) {
+    return d > 128 ? '#91003f' :
+           d > 64  ? '#ce1256' :
+           d > 32  ? '#e7298a' :
+           d > 16  ? '#df65b0' :
+           d > 8   ? '#c994c7' :
+           d > 4   ? '#ceadd6' :
+           d > 0   ? '#d8cee8' :
+                      '#DDDDDD';
+}
+
+	function style(feature) {
+    return {
+        fillColor: getColor(feature.properties.NUMPOINTS),
+        weight: 0.2,
+        opacity: 1,
+        color: 'black',
+        fillOpacity: 0.67
+    };
+}
+function highlightFeature(e) {
+    var layer = e.target;
+
+    layer.setStyle({
+        weight: 3,
+        color: '#ef86c2',
+        dashArray: '',
+        fillOpacity: 0.7
+    });
+
+    if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
+        layer.bringToFront();
+    }
+	info.update(layer.feature.properties);
+}
+
+function resetHighlight(e) {
+    geojson.resetStyle(e.target);
+	info.update();
+}
+var geojson;
+function zoomToFeature(e) {
+    mymap.setView(e.latlng,11.5);
+}
+function onEachFeature(feature, layer) {
+    layer.on({
+        mouseover: highlightFeature,
+        mouseout: resetHighlight,
+        click: zoomToFeature
+    });
+}
+var info = L.control();
+
+info.onAdd = function (mymap) {
+    this._div = L.DomUtil.create('div', 'info'); // create a div with a class "info"
+    this.update();
+    return this._div;
+};
+
+// method that we will use to update the control based on feature properties passed
+info.update = function (props) {
+    this._div.innerHTML = '<h4>Number of structural fires reported</h4>' +  (props ?
+        props.NUMPOINTS + ' fires'
+        : 'Hover over a region');
+};
+
+info.addTo(mymap);
+geojson = L.geoJson(hexbin, {
+    style: style,
+    onEachFeature: onEachFeature
+}).addTo(mymap);
+
+var legend = L.control({position: 'bottomright'});
+
+legend.onAdd = function (mymap) {
+
+    var div = L.DomUtil.create('div', 'info legend'),
+        grades = [1, 4, 8, 16, 32, 64, 128],
+        labels = [];
+
+    // loop through our density intervals and generate a label with a colored square for each interval
+    for (var i = 0; i < grades.length; i++) {
+        div.innerHTML +=
+            '<i style="background:' + getColor(grades[i] + 1) + '"></i> ' +
+            grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
+    }
+
+    return div;
+};
+
+legend.addTo(mymap);
+
+
+	</script>
+					</div>
                 </div>
             </div>
         </div>
