--- a/pages/lab4.html
+++ b/pages/lab4.html
@@ -210,6 +210,7 @@ legend.addTo(mymap);
 	</script>
 					</div>
                 </div>
+				                        <p align="right" style="white-space:pre"><font color="#ce1256"><i>Data from: January 2013 – June 30, 2016     </i></p>
             </div>
         </div>
         <!-- /#page-content-wrapper -->
